{
  "version": 4,
  "terraform_version": "1.16.0",
  "serial": 30,
  "lineage": "2b094ae5-d499-b8d9-d62a-eb51e0def156",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "dashboard_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03370c6f05510282b",
            "arn": "arn:aws:ec2:ap-southeast-1:767397956626:elastic-ip/eipalloc-03370c6f05510282b",
            "domain": "vpc",
            "id": "eipalloc-03370c6f05510282b",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-13-215-13-189.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.215.13.189",
            "public_ipv4_pool": "amazon",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "counting-dashboard-service-dashboard-eip"
            },
            "tags_all": {
              "Name": "counting-dashboard-service-dashboard-eip"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "767397956626",
            "id": "eipalloc-03370c6f05510282b",
            "region": "ap-southeast-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "counting_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0ba4172b23e57d5a8",
            "arn": "arn:aws:ec2:ap-southeast-1:767397956626:instance/i-0a50e670480726c7d",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a50e670480726c7d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "counting-dashboard-service-ssh-key.pem",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0e0f9838a86c1548c"
              }
            ],
            "primary_network_interface_id": "eni-0e0f9838a86c1548c",
            "private_dns": "ip-172-16-1-43.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.1.43",
            "region": "ap-southeast-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-020ac261253e67b9e",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02cf664f46842e7d5",
            "tags": {
              "Name": "Counting Service"
            },
            "tags_all": {
              "Name": "Counting Service"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b3114e997aab418e"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "767397956626",
            "id": "i-0a50e670480726c7d",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_key_pair.counting_service_keypair",
            "aws_security_group.counting_service",
            "aws_security_group.dashboard_service",
            "aws_subnet.counting_service",
            "aws_vpc.my_vpc",
            "data.aws_ami.ubuntu",
            "tls_private_key.keygen"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dashboard_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0ba4172b23e57d5a8",
            "arn": "arn:aws:ec2:ap-southeast-1:767397956626:instance/i-0f8a9cb01ef8061f9",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f8a9cb01ef8061f9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "counting-dashboard-service-ssh-key.pem",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-06d5fa84012426483"
              }
            ],
            "primary_network_interface_id": "eni-06d5fa84012426483",
            "private_dns": "ip-172-16-2-147.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.2.147",
            "public_ip": "13.229.62.18",
            "region": "ap-southeast-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b777a7714512ba4f",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0acc3be95e671f7f0",
            "tags": {
              "Name": "Counting Service"
            },
            "tags_all": {
              "Name": "Counting Service"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d466c5e5e3007f06"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "767397956626",
            "id": "i-0f8a9cb01ef8061f9",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_key_pair.counting_service_keypair",
            "aws_security_group.dashboard_service",
            "aws_subnet.dashboard_service",
            "aws_vpc.my_vpc",
            "data.aws_ami.ubuntu",
            "tls_private_key.keygen"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:767397956626:internet-gateway/igw-0bd192f307ef4eb1f",
            "id": "igw-0bd192f307ef4eb1f",
            "owner_id": "767397956626",
            "region": "ap-southeast-1",
            "vpc_id": "vpc-048a486fcec8e82b3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "767397956626",
            "id": "igw-0bd192f307ef4eb1f",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dashboard_counting_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:767397956626:route-table/rtb-02fda16ef80658300",
            "id": "rtb-02fda16ef80658300",
            "owner_id": "767397956626",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bd192f307ef4eb1f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-048a486fcec8e82b3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "767397956626",
            "id": "rtb-02fda16ef80658300",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_internet_gateway.public",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dashboard_counting_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a00bcdd72b79f1c4",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-02fda16ef80658300",
            "subnet_id": "subnet-0acc3be95e671f7f0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "767397956626",
            "id": "rtbassoc-0a00bcdd72b79f1c4",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_internet_gateway.public",
            "aws_route_table.dashboard_counting_service",
            "aws_subnet.dashboard_service",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "counting_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:767397956626:security-group/sg-0b3114e997aab418e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All traffic allowed",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b3114e997aab418e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow ssh from dashboard service only",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d466c5e5e3007f06"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Only dashboard service should be able to access",
                "from_port": 8001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d466c5e5e3007f06"
                ],
                "self": false,
                "to_port": 8001
              }
            ],
            "name": "counting-service-security-group",
            "name_prefix": "",
            "owner_id": "767397956626",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "counting-service-security-group"
            },
            "tags_all": {
              "Name": "counting-service-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-048a486fcec8e82b3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "767397956626",
            "id": "sg-0b3114e997aab418e",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_security_group.dashboard_service",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dashboard_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:767397956626:security-group/sg-0d466c5e5e3007f06",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d466c5e5e3007f06",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all IPv4 inbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "dashboard-service-security-group",
            "name_prefix": "",
            "owner_id": "767397956626",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dashboard-service-security-group"
            },
            "tags_all": {
              "Name": "dashboard-service-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-048a486fcec8e82b3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "767397956626",
            "id": "sg-0d466c5e5e3007f06",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "counting_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:767397956626:subnet/subnet-02cf664f46842e7d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02cf664f46842e7d5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "767397956626",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "counting-service-subnet"
            },
            "tags_all": {
              "Name": "counting-service-subnet"
            },
            "vpc_id": "vpc-048a486fcec8e82b3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "767397956626",
            "id": "subnet-02cf664f46842e7d5",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dashboard_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:767397956626:subnet/subnet-0acc3be95e671f7f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "172.16.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0acc3be95e671f7f0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397956626",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "dashboard-service-subnet"
            },
            "tags_all": {
              "Name": "dashboard-service-subnet"
            },
            "vpc_id": "vpc-048a486fcec8e82b3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "767397956626",
            "id": "subnet-0acc3be95e671f7f0",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:767397956626:vpc/vpc-048a486fcec8e82b3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0cce15d4f0d5eb5a3",
            "default_route_table_id": "rtb-00082f87aa7873f12",
            "default_security_group_id": "sg-075570e08800634ae",
            "dhcp_options_id": "dopt-0e23f3a90282c0bee",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-048a486fcec8e82b3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00082f87aa7873f12",
            "owner_id": "767397956626",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "counting-dashboard-service-vpc"
            },
            "tags_all": {
              "Name": "counting-dashboard-service-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "767397956626",
            "id": "vpc-048a486fcec8e82b3",
            "region": "ap-southeast-1"
          }
        }
      ]
    }
  ]
}